# BMAD-METHOD

./: .bmad-driver.yaml  .gitignore  AUTONOMOUS_REFACTOR_PLAN.md
docs/: architecture.md  component-inventory.md  contribution-guide.md  deployment-guide.md  development-guide.md  index.md  project-overview.md  source-tree-analysis.md
src/bmad-driver/: LICENSE.txt  README.md  pyproject.toml
src/bmad-driver/src/bmad_driver/: __about__.py  __main__.py
src/bmad-driver/src/bmad_driver/cli/: __init__.py
src/bmad-driver/tests/: __init__.py
tools/: build-docs.js
tools/cli/installers/lib/core/: installer.js
