[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bmad-driver"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Rayshawn McCall", email = "rayshawnmccall@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
]

[project.urls]
Documentation = "https://github.com/rayshawnmccall21/BMAD-METHOD/tree/main/src/bmad-driver"
Issues = "https://github.com/rayshawnmccall21/BMAD-METHOD/issues"
Source = "https://github.com/rayshawnmccall21/BMAD-METHOD"

[project.scripts]
bmad-driver = "bmad_driver.cli:bmad_driver"

[tool.hatch.version]
path = "src/bmad_driver/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/bmad_driver tests}"

[tool.coverage.run]
source_pkgs = ["bmad_driver", "tests"]
branch = true
parallel = true
omit = [
  "src/bmad_driver/__about__.py",
]

[tool.coverage.paths]
bmad_driver = ["src/bmad_driver", "*/bmad-driver/src/bmad_driver"]
tests = ["tests", "*/bmad-driver/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
